# disksleuth

./: .gitignore  ATLAS.md  Cargo.toml  PROGRESS.md  README.md  build.rs  package-lock.json  update-application.ps1
.github/workflows/: ci.yml  release.yml
crates/disksleuth-core/: Cargo.toml
crates/disksleuth-core/src/: lib.rs
crates/disksleuth-core/src/analysis/: age.rs  duplicates.rs  file_types.rs  mod.rs  top_files.rs
crates/disksleuth-core/src/model/: file_node.rs  file_tree.rs  mod.rs  size.rs
crates/disksleuth-core/src/monitor/: mod.rs
crates/disksleuth-core/src/platform/: drives.rs  mod.rs  permissions.rs
crates/disksleuth-core/src/scanner/: mft.rs  mod.rs  parallel.rs  progress.rs
crates/disksleuth-core/tests/: e2e_scanner.rs
crates/disksleuth-gui/: Cargo.toml
crates/disksleuth-gui/src/: app.rs  icon.rs  lib.rs  state.rs  theme.rs
crates/disksleuth-gui/src/panels/: chart_panel.rs  details_panel.rs  mod.rs  monitor_panel.rs  scan_panel.rs  tree_panel.rs
crates/disksleuth-gui/src/widgets/: drive_picker.rs  mod.rs  size_bar.rs  status_bar.rs  toolbar.rs  tree_view.rs  treemap.rs
crates/disksleuth-gui/tests/: e2e_state.rs
src/: main.rs
