[workspace]
members = ["crates/disksleuth-core", "crates/disksleuth-gui"]
resolver = "2"

[workspace.dependencies]
# UI
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"

# Scanning
jwalk = "0.8"
rayon = "1.10"

# Data
compact_str = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Platform
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
] }
num_cpus = "1.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Swatto"]
repository = "https://github.com/Swatto86/DiskSleuth"
homepage = "https://github.com/Swatto86/DiskSleuth"
readme = "README.md"
keywords = ["disk", "storage", "analyzer", "windows", "treemap"]
categories = ["filesystem", "visualization"]

[package]
name = "disksleuth"
version.workspace = true
edition.workspace = true
description = "A fast, visual disk space analyser for Windows — featuring parallel scanning, SpaceSniffer-style treemap, and an interactive tree view"
repository.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "DiskSleuth"
path = "src/main.rs"

[dependencies]
disksleuth-gui = { path = "crates/disksleuth-gui" }
eframe.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
