[package]
name = "disksleuth-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core scanning and analysis engine for DiskSleuth — no UI dependencies"

[dependencies]
jwalk.workspace = true
rayon.workspace = true
compact_str.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
windows.workspace = true
num_cpus.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
